<resources>
    <string name="app_name" translatable="false">NeuralMaths</string>
    <string name="photo">Photo</string>
    <string name="ecrire">Écrire</string>
    <string name="clavier">Clavier</string>
    <string name="parametres">Paramètres</string>
    <string name="accueil">Accueil</string>
    <string name="layout">Préférence manuelle</string>
    <string name="langue">Langue</string>
    <string name="mode_par_defaut">Mode par défaut</string>
    <string name="gaucher">Gaucher</string>
    <string name="droitier">Droitier</string>
    <string name="francais" translatable="false">Français</string>
    <string name="english" translatable="false">English</string>
    <string name="confirmer">Confirmer</string>
    <string name="clear">Effacer</string>
    <string name="done">Terminer</string>
    <string name="callCam">CAMÉRA</string>
    <string name="callGal">GALERIE</string>
    <string name="cropNotSupported">Désolé, votre appareil ne supporte pas l\'action pour rogner</string>
    <string name="database_error">Probleme de database</string>
    <string name="network_accessibility_error">Réseau de neurone inacessible.</string>
    <string name="welcome">Bienvenue !</string>
    <string name="transfer_fichier_1">Transfère du fichier texte 1/2</string>
    <string name="transfere_seul_fois">Ce transfère n\'arrivera qu\'une seule fois!</string>
    <string name="transfer_fichier_2">Transfère du fichier texte 2/2</string>
    <string name="txt_file_error">Erreur de fichier texte</string>
    <string name="access_camera">CAMERA permission accordée, access à la CAMÉRA</string>
    <string name="permission_granted">Permission accordée</string>
    <string name="permission_cancelled">Permission refusée</string>
    <string name="select_img_gallery">Selectionnez une image de la galerie</string>
    <string name="ok">OK</string>
    <string name="problem_decoupage">Le découpage de caractère ne s\'est pas déroulé normalement</string>
    <string name="problem_image_decoder">Incapable de travailler avec l\'image reçu</string>
    <string name="text_zone">Équation</string>
    <string name="feuille_blanche_option">Feuilles blanches</string>
    <string name="feuilles_lignees_option">Feuilles lignées</string>
    <string name="TrouverY">TrouverY</string>
    <string name="TrouverZéros">TrouverZéros</string>
    <string name="TrouverX">TrouverX</string>
    <string name="Simplification">Simplification</string>
    <string name="Factorisation">Factorisation</string>
    <string name="Deriver">Deriver</string>
    <string name="Integrer">Integrer</string>
    <string name="confirmation">Confirmation</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="your_eq_confirm">"Est-ce bien votre équation: "</string>
    <string name="sheet_type">Type de feuille</string>
    <string name="Aucune">Aucune</string>
    <string name="AucuneMethodeResolution">Aucune réponse possible  (0 méthode de résolution)</string>
    <string name="cancel">Cancel</string>
    <string name="propos">À propos</string>
    <string name="aboutTxt">Projet android NeuralMath créé par Gabrielle Albert, Mathieu Boucher, Alexandre Charest, Marc-Antoine C. Lafrenière , Godefroy St-Pierre, dans le cadre du cours de projet d\'intégration de sciences informatiques et mathématiques. Ce projet avait pour but le développement d\'une intelligence artificielle créée à partir de notions apprises dans des cours universitaires et de recherches internet. Après avoir reconnu une équation mathématique prise avec une caméra en utilisant le réseau de neurones,  on doit résoudre l\'équation et afficher les étapes de résolution. Fin du projet : 8 Mai 2017</string>
    <string name="nn_not_ready">Désolé, le réseau de neurones n\'est pas prêt.</string>
    <string name="equation_ici">Équation ici</string>
    <string name="equation">Équation :</string>
    <string name="m_thode_de_r_solution">Méthode de résolution</string>
    <string name="r_ponse_s">Réponse(s) :</string>
    <string name="erreur_404">Erreur 404</string>
    <string name="d_monstration">DÉMONSTRATION</string>
    <string name="btn_clear_eq">Effacer l\'équation</string>
    <string name="corriger">Corriger</string>
    <string name="editer">Éditer</string>
    <string name="type_correction">Type de correction</string>
    <string name="IsolerVariable">Isoler Variable</string>
    <string name="titre_choisir_var">Choisir la variable</string>
    <string name="changer_la_variable">Changer la variable</string>
    <string name="annuler_txt">Annuler</string>
    <string name="eff_lettre">Efface une lettre</string>
</resources>
