<?xml version="1.0" encoding="utf-8"?>

<ViewFlipper
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_main"

android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.example.marc4492.neuralmath.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/homePage"
        android:orientation="vertical">
        <ListView
            android:id="@+id/listHome"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </ListView>
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/layout"
                android:id="@+id/layoutOptionsText" />

            <View style="@style/Divider"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/layoutOption">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/droitier"
                    android:id="@+id/rightOption" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gaucher"
                    android:id="@+id/leftOption"/>

            </RadioGroup>

            <View style="@style/Divider"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/langue"
                android:id="@+id/feuilleTypeOptionText" />

            <View style="@style/Divider"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/feuilleTypeOption">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/feuille_blanche_option"
                    android:id="@+id/blancheOption"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/feuilles_lignees_option"
                    android:id="@+id/ligneOption"/>

            </RadioGroup>

            <View style="@style/Divider"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/langue"
                android:id="@+id/languageOptionsText" />

            <View style="@style/Divider"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/langueOption">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/francais"
                    android:id="@+id/frenchOption"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/english"
                    android:id="@+id/englishOption"/>

            </RadioGroup>

            <View style="@style/Divider"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mode_par_defaut"
                android:id="@+id/defaultModeOptionsText"/>


            <View style="@style/Divider"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/defautOption">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/accueil"
                    android:id="@+id/homeOption"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/photo"
                    android:id="@+id/photoOption"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ecrire"
                    android:id="@+id/writeOption"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/clavier"
                    android:id="@+id/clavierOption"/>

            </RadioGroup>

            <View style="@style/Divider"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/confirmer"
                android:onClick="confirmPref"/>
        </LinearLayout>
    </ScrollView>

    <!--Photo-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    </LinearLayout>



    <!--KeyBoard-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.example.marc4492.neuralmath.MathEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/text_zone"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/keyboard"
            android:id="@+id/writingZone" />

        <com.example.marc4492.neuralmath.MathKeyboard
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:id="@+id/keyboard"
            android:visibility="gone"/>

    </RelativeLayout>

</ViewFlipper>